@@ -25,6 +25,7 @@
 	* Fixed bug #36623: Index Queue initialization crashes with erronous mount page
 	* Updated SolrPhpClient to r62
 	* Change tx_solr_ConnectionManager::getConfiguredSolrConnections(): extract getConfiguredSolrConnectionByRootPage()
+	* Added tx_solr_Site::getRootPage()
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
